unpackaged/main/default/objects/Notes_on_School_Transport__c/Notes_on_School_Transport__c.object-meta.xml
<CustomObject>
    <label>Notes on School Transport</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes on School Transport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>