unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Behaviour__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Behaviour</label>
    <length>18</length>
    <type>Text</type>
</CustomField>