unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/Bus_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Bus_Cleanliness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bus Cleanliness</label>
    <length>18</length>
    <type>Text</type>
</CustomField>