unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>School_Transport_Company_Detail__c</referenceTo>
    <relationshipLabel>Notes on School Transport</relationshipLabel>
    <relationshipName>Notes_on_School_Transport</relationshipName>
    <type>Lookup</type>
</CustomField>