unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External</label>
    <length>18</length>
    <type>Text</type>
</CustomField>