unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/First_Period__c.field-meta.xml
<CustomField>
    <fullName>First_Period__c</fullName>
    <label>First Period</label>
    <type>Time</type>
</CustomField>