unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Date</label>
    <type>Date</type>
</CustomField>