unpackaged/main/default/objects/Notes_on_School_Transport__c/fields/Technical_malfunctions__c.field-meta.xml
<CustomField>
    <fullName>Technical_malfunctions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technical malfunctions</label>
    <length>18</length>
    <type>Text</type>
</CustomField>